Fix: paddings and overflow

--- a/src/components/BackgroundTexture/BackgroundTexture.css
+++ b/src/components/BackgroundTexture/BackgroundTexture.css
@@ -1,5 +1,5 @@
 .background-texture {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
