--- a/src/components/WalletConnectModule/ConnectWallet/ConnectWallet.css
+++ b/src/components/WalletConnectModule/ConnectWallet/ConnectWallet.css
@@ -31,7 +31,7 @@
   gap: 10px;
 }
 .connect-wallet__not-connected-icon {
-  height: 19px;
+  height: 18px;
 }
 
 .connect-wallet__connected {
