--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 
   background: var(--background-color-1);
   color: var(--foreground-color-1);
-  overflow: hidden;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
