--- a/src/layouts/Cetnered/Centered.css
+++ b/src/layouts/Cetnered/Centered.css
@@ -1,6 +1,7 @@
 .centered-layout {
-  width: 100%;
-  height: 100%;
+  min-height: 100%;
+
+  padding: 10px;
 
   display: flex;
   align-items: center;
